--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awsome.min.css" type="text">
+    <title>Rosie</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <section>
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
