--- a/resume.html
+++ b/resume.html
@@ -52,6 +52,22 @@
                         </h3>
                     </div>
                 </div>
+                <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                    <h4>National COllege of Art and Design (NCAD)</h4>
+                    <p>Sculptor in residence</p>
+                </div>
+                <div class="timeline-item" data-dates="04/2004 - 06/2008">
+                    <h4>Fisher and Diaz Funeral DIrectors</h4>
+                    <p>Junoir Embalmer</p>
+                </div>
+                <div class="timeline-item" data-dates="06/1998 - 04/2004">
+                    <h4>Phantom Design Inc. Dublin</h4>
+                    <p>Juinor Front End Developer</p>
+                </div>
+                <div class="timeline-item" data-dates="06/2011 - Present">
+                    <h4>Hooli Inc. Silicon Valley</h4>
+                    <p>Full Stack Web Developer</p>
+                </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
