--- a/resume.html
+++ b/resume.html
@@ -25,16 +25,16 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -52,21 +52,23 @@
                         </h3>
                     </div>
                 </div>
-                <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                    <h4>National COllege of Art and Design (NCAD)</h4>
-                    <p>Sculptor in residence</p>
-                </div>
-                <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                    <h4>Fisher and Diaz Funeral DIrectors</h4>
-                    <p>Junoir Embalmer</p>
-                </div>
-                <div class="timeline-item" data-dates="06/1998 - 04/2004">
-                    <h4>Phantom Design Inc. Dublin</h4>
-                    <p>Juinor Front End Developer</p>
-                </div>
-                <div class="timeline-item" data-dates="06/2011 - Present">
-                    <h4>Hooli Inc. Silicon Valley</h4>
-                    <p>Full Stack Web Developer</p>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                        <h4>National COllege of Art and Design (NCAD)</h4>
+                        <p>Sculptor in residence</p>
+                    </div>
+                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
+                        <h4>Fisher and Diaz Funeral DIrectors</h4>
+                        <p>Junoir Embalmer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/1998 - 04/2004">
+                        <h4>Phantom Design Inc. Dublin</h4>
+                        <p>Juinor Front End Developer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2011 - Present">
+                        <h4>Hooli Inc. Silicon Valley</h4>
+                        <p>Full Stack Web Developer</p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
@@ -153,7 +155,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
